manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: python-backend
          # image: gcr.io/debateai-401304/python-backend:latest
          image: debateai-web-back:latest
          # imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "-b", ":8000", "config.wsgi"]
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "0.2" # CPU制限 (0.2コア)
              memory: "256Mi" # メモリ制限 (256 MiB)
            requests:
              cpu: "0.1" # CPUリクエスト (0.1コア)
              memory: "128Mi" # メモリリクエスト (128 MiB)

        - name: nginx-back
          # image: gcr.io/debateai-401304/nginx_back:latest
          image: debateai-backend-server:latest
          # imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.2" # CPU制限 (0.2コア)
              memory: "256Mi" # メモリ制限 (256 MiB)
            requests:
              cpu: "0.1" # CPUリクエスト (0.1コア)
              memory: "128Mi" # メモリリクエスト (128 MiB)
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 80
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
